--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -9,11 +9,12 @@
 
     <!-- Theme colors -->
     <!-- Overriding chromium theme colors to brave theme colors -->
+    <color name="baseline_primary_200">@color/modern_blue_300</color>
+    <color name="black_alpha_30">#4D000000</color>
+    <color name="black_alpha_50">#80000000</color>
     <color name="modern_blue_300">#FF7654</color>
     <color name="modern_blue_600">#EA3A0D</color>
     <color name="modern_blue_700">#C22700</color>
-    <color name="black_alpha_30">#4D000000</color>
-    <color name="black_alpha_50">#80000000</color>
 
     <!-- Onborading colors -->
     <color name="onboarding_orange">#fb542b</color>
